<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.MainCustomerFragment">

    <ImageView
        android:id="@+id/survey_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_115sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:contentDescription="@string/logo"
        android:src="@drawable/survey_ic" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/survey_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/take_a_survey"
        android:textColor="@color/dark_blue_app"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_take_survey"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_below="@+id/txt"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/btn_bg"
        android:paddingStart="@dimen/_25sdp"
        android:paddingEnd="@dimen/_25sdp"
        android:text="@string/take_survey"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

</RelativeLayout>