<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.LoginDetails.LoginActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_125sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/login_large"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />
<LinearLayout
    android:id="@+id/llcenter"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginEnd="@dimen/_16sdp"
    android:layout_marginStart="@dimen/_16sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_height="wrap_content">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/blue_splash">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:backgroundTint="@color/gray"
            android:focusableInTouchMode="true"
            android:hint="Email"
            android:fontFamily="@font/lato_regular"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/blue_splash">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:backgroundTint="@color/gray"
            android:focusableInTouchMode="true"
            android:hint="Password"
            android:fontFamily="@font/lato_regular"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn_bg"
        app:backgroundTint="@color/light_blue"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:fontFamily="@font/lato_regular"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/reset_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:layout_gravity="center_horizontal"
        android:text="@string/reset_your_password"
        android:fontFamily="@font/lato_regular"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/dark_blue_app"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llcenter"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/gray"
            android:padding="@dimen/_5sdp"
            android:fontFamily="@font/lato_regular"
            android:textSize="@dimen/_12sdp" />
        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/dark_blue_app"
            android:padding="@dimen/_5sdp"
            android:textStyle="bold"
            android:fontFamily="@font/lato_regular"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

</LinearLayout>
</ScrollView>