<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:openDrawer="start">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rvToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_56sdp"
            android:background="@color/yellow" />


        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />
    </RelativeLayout>
    <TextView
        android:id="@+id/txt"
        android:layout_below="@+id/rvToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/profile"
        android:textColor="@color/dark_blue_app"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_below="@+id/txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/user_ic" />

    <TextView
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="Change Picture"
        android:textColor="@color/dark_blue_app"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/upload"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/et_bg"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85"
            android:editable="false"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:padding="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/text_color_black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight=".15"
            android:contentDescription="@string/logo"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:src="@drawable/ic_edit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/linear"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/et_bg"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/user_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="0.85"
            android:editable="false"
            android:hint="@string/email"
            android:background="@android:color/transparent"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/text_color_black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:id="@+id/edit_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight=".15"
            android:contentDescription="@string/logo"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:src="@drawable/ic_edit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/linear2"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/et_bg"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/user_pass"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85"
            android:editable="false"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@color/text_color_black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:id="@+id/edit_pass"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight=".15"
            android:contentDescription="@string/logo"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:src="@drawable/ic_edit" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_below="@+id/linear3"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/btn_bg"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

</RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@drawable/bg_1"
        app:itemIconTint="#fff"
        app:itemTextColor="#fff"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/user_nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>