<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.Token2Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:text="@string/t4"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_16sdp" />

        <RelativeLayout
            android:id="@+id/lay1"
            android:layout_below="@+id/txt"
            android:layout_margin="16dp"
            android:background="@drawable/round_box1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/t1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/t2"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/dark_blue_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_below="@+id/t1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/t5"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <ImageView
                android:id="@+id/img"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerInParent="true"
                android:src="@drawable/mag" />

            <ImageView
                android:id="@+id/qr_code"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_share" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay1"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:lineSpacingExtra="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:text="Ready for Tier 3?"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />




        <LinearLayout
            android:id="@+id/linear"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/share_ic"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_share" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_below="@+id/txt1"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/survey3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">


                <RelativeLayout
                    android:id="@+id/yes"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="80dp">


                    <RelativeLayout
                        android:background="@drawable/btn_bg"
                        android:layout_width="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_height="65dp"/>

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/tier3"
                        android:layout_marginLeft="16dp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_marginTop="-3dp"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="-4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:src="@drawable/mag"
                                android:layout_marginLeft="-8dp"
                                android:layout_width="45dp"
                                android:layout_height="45dp" />
                            <ImageView
                                android:src="@drawable/mag"
                                android:layout_marginLeft="-10dp"
                                android:layout_width="45dp"
                                android:layout_height="45dp" />
                            <ImageView
                                android:src="@drawable/mag"
                                android:layout_marginLeft="-10dp"
                                android:layout_width="45dp"
                                android:layout_height="45dp" />
                            <ImageView
                                android:src="@drawable/mag"
                                android:layout_marginLeft="-10dp"
                                android:layout_width="45dp"
                                android:layout_height="45dp" />
                            <ImageView
                                android:src="@drawable/mag"
                                android:layout_marginLeft="-10dp"
                                android:layout_width="45dp"
                                android:layout_height="45dp" />

                        </LinearLayout>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_marginTop="-3dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:src="@drawable/mag"
                                android:layout_marginLeft="-8dp"
                                android:layout_width="45dp"
                                android:layout_height="45dp" />
                            <ImageView
                                android:src="@drawable/mag"
                                android:layout_marginLeft="-10dp"
                                android:layout_width="45dp"
                                android:layout_height="45dp" />
                            <ImageView
                                android:src="@drawable/mag"
                                android:layout_marginLeft="-10dp"
                                android:layout_width="45dp"
                                android:layout_height="45dp" />
                            <ImageView
                                android:src="@drawable/mag"
                                android:layout_marginLeft="-10dp"
                                android:layout_width="45dp"
                                android:layout_height="45dp" />
                            <ImageView
                                android:src="@drawable/mag"
                                android:layout_marginLeft="-10dp"
                                android:layout_width="45dp"
                                android:layout_height="45dp" />

                        </LinearLayout>

                    </LinearLayout>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone"
                android:background="@drawable/btn_bg"
                android:text="No"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>